# tesseract-layout

./: .githook-pre-commit  CMakeLists.txt  README.md  tesseract-layout.cc
